<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:textColor="#000000"
        android:weightSum="2" >
        <!-- NOT YET IMPLEMENTED
        <Switch
            android:text="Show Only Restaurants With Deals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/deals_only_switch"
            android:layout_weight="0.10"
            android:textStyle="bold" />
            -->
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="Zip Code"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >

        <!-- NOT YET IMPLEMENTED
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="Search Radius (Meters)"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/search_radius"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:ems="10"
            android:hint="10"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="#000000" />
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="Max Search Results"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/max_search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:ems="10"
            android:hint="20"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >

        <!-- NOT YET IMPLEMENTED
        <TextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="selectCategories"
            android:clickable="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="Restaurant Type"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/restaurant_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Not supported yet"
            android:padding="10dp"
            android:textSize="15sp" />
            -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >

        <!-- NOT YET IMPLEMENTED
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="Sort Results"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sorting_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Not supported yet"
            android:padding="10dp"
            android:textSize="15sp" />
            -->
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="1px"
        android:weightSum="2" >
        <Button
            android:text="Save Options"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="saveOptions"
            android:id="@+id/save_options" />

        <Button
            android:text="Cancel"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="cancelOptions"
            android:id="@+id/cancel_options" />
    </LinearLayout>

</LinearLayout>