<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cmsc355.hungr.MainActivity">
    <item
        android:id="@+id/categories_options"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="Categories"
        app:showAsAction="always"
    />
    <item
        android:id="@+id/search_options"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search Options"
        app:showAsAction="always" />

</menu>
